# fsp-kabachok

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  docker-compose.yaml  playground-compose.yaml  pyproject.toml  teplitsa-compose.yaml
alarmist/: Dockerfile
alarmist/src/: collect.py  entities.py  main.py  models.py  utils.py
alarmist/src/db/: manage.py  metrics.py  redis.py
config/: settings.example.json  settings.json
db/: init.sql
kabachok/src/: main.py  states.py
kabachok/src/view/: markups.py  messages.py  utils.py  viewmodels.py
playground/: Dockerfile  README.md  cli.py  databases.json  init.sql  playground.py  pyproject.toml
semya/db/: metrics.py
semya/src/: entities.py  main.py  models.py  utils.py
semya/src/db/: metrics.py
shared/: db.py  entities.py  metric.py  models.py  pyproject.toml  resources.py  routes.py  utils.py
src/: main.py  states.py
src/db/: metrics.py
src/view/: markups.py  messages.py  utils.py
teplitsa/: README.md  init.sql
teplitsa/src/: cli.py  setup.py
teplitsa/test/: test.py
tgbot/: Dockerfile
tgbot/src/: api.py  graph.py  main.py  models.py  states.py
tgbot/src/api/: api.py  database_api.py
tgbot/src/view/: markups.py  messages.py  models.py  states.py  texts.py  utils.py  viewmodels.py
tgbot/src/view/handlers/: add_database_from_file_handlers.py  add_database_handlers.py  change_max_connections_handlers.py  delete_database_handlers.py  get_state_handlers.py  get_state_plots_handlers.py  menu_handlers.py
