[project]
name = "fsp-kabachok"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nikita Rydanov", email = "wrongwayboyy@gmail.com" }
    # Add yourself here
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.10.1",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
    "flake8>=5.0.4",
    "ipython>=8.12.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 79

[tool.pylsp-mypy]
enabled = false
live_mode = false
dmypy = true
strict = false
