[project]
name = "barash"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nikita Rydanov", email = "wrongwayboyy@gmail.com" }
]
dependencies = [
    "databases>=0.8.0",
    "click>=8.1.7",
    "pydantic>=2.4.2",
    "asyncpg>=0.28.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
barash = 'cli:cli'
